# fry-edge-miner

./: .gitignore  README.md  fem_qa.mjs  index.html  latest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  main.rs
src-tauri/src/api/: client.rs  credentials.rs  error_classify.rs  installations.rs  leases.rs  migration.rs  mod.rs  products.rs  types.rs  versions.rs
src-tauri/src/commands/: debug.rs  device.rs  integration.rs  migration.rs  mod.rs  rewards.rs  settings.rs  system.rs  updates.rs
src-tauri/src/config/: miner_key.rs  mod.rs  store.rs  wallet.rs
src-tauri/src/integrations/: aem.rs  diiisco.rs  docker_manager.rs  download.rs  fryvpn.rs  mod.rs  mysterium.rs  mysterium_lan_check.rs  presearch.rs  space_acres.rs  storj.rs
src-tauri/src/integrations/diiisco_deploy/: docker-compose.yml
src-tauri/src/integrations/diiisco_deploy/diiisco-node/: Dockerfile
src-tauri/src/logging/: mod.rs  scrubber.rs
src-tauri/src/migration/: mod.rs
src-tauri/src/poc/: cache.rs  gates.rs  hardware.rs  mod.rs  reporter.rs
src-tauri/src/supervisor/: health.rs  mod.rs  platform.rs  process.rs
src/components/: CopyField.tsx  IntCard.tsx  IntegrationCard.tsx  NetSVG.tsx  PageHeader.tsx  PoCGrid.tsx  PoCSlotGrid.tsx  RewardBar.tsx  SettingRow.tsx  Sidebar.tsx  StatCard.tsx  StatusIndicator.tsx  Toggle.tsx  TopBar.tsx  UpdCard.tsx
(+51 files in other folders)
