[package]
name = "fry-edge-miner"
version = "0.2.26"
description = "Fry Edge Miner - Multi-integration decentralized platform client"
authors = ["Fry Networks"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tempfile = "3"
zip = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
